--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,42 +1,4 @@
-
-<div class='top-page-header'>
-  <%#ロゴの情報が入る%>
-
-  <div class='photoroke-icon'>
-    <a href="/">
-      <img class='photoroke-icon-photo'src="/assets/Photoroke_logo.svg">
-    </a>
-  </div>
-
-  <%#ページの名前が入る%>
-  <%# <h2 class='top-page-name'> %>
-    <%# ここに各ページの名前が入ります %>
-  <%# </h2> %>
-
-  <%# ログインアイコン %>
-  <div class="login">
-    <a href="#">
-      <img 
-        class="login-icon"
-        src="/assets/login.svg"
-        alt="ログインアイコン">
-    </a>
-  </div>
-
-  <%#新規登録アイコン%>
-  <div class="sign-up">
-    <a href="#">
-      <img
-        class="sign-up-icon"
-        src="/assets/sign-up.svg"
-        alt="新規登録ボタン">
-    </a>
-  </div>
-</div>
-  
-
-
-
+<%= render "shared/homes_header"%>
   <%# 大枠 %>
 <div class="contents">
 
