--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -1,9 +1,3 @@
-*{
-  margin: 0px; 
-}
-
-/* ヘッダー */
-
 .top-header {
   width: 100vw;
   height: 15vh;
@@ -15,40 +9,12 @@
   z-index: 1;
 }
 
-.photoroke-icon{
-  height: 90%;
-  /* margin-top: 10px; */
-  position: absolute;
-  left: 30px;
-}
-
-.photoroke-icon-photo{
-  height: 100%;
-}
-
-.top-page-name{
+.top-page-name {
   height: 50%;
-  font-size: 3vh;
-}
-
-.sign-up{
-  height: 50%;
-  margin: 10px, 0px;
   position: absolute;
-  right: 30px;
+  left: 800px;
 }
 
-.sign-up-icon{
-  height: 100%;
-}
-
-.login{
-  height: 50%;
-  margin: 10px, 0px;
-  position: absolute;
-  right: 300px;
-}
-
-.login-icon{
+.page-name {
   height: 100%;
 }
