--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/header"%>
+<%= render "shared/sign-up_header"%>
 
 <%= form_with model: @user, url: user_registration_path , class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
