--- a/app/views/shared/_sign-up_header.html.erb
+++ b/app/views/shared/_sign-up_header.html.erb
@@ -10,18 +10,18 @@
   <%#ページの名前が入る%>
   <div class='top-page-name'>
     <h2 class='page-name'> 
-      ここに各ページの名前が入ります
+      新規登録
     </h2>
   </div>
 
 <%# ログイン %>
-  <div class='login-button'>
-    <a href='/users/sign_in' class="login">ログイン</a>
+  <div class='sing-login-button'>
+    <a href='/users/sign_in' class="sing-login">ログイン</a>
   </div>
 
 
 <%#新規登録アイコン%>
-  <div class='sign-up-button'>
+  <%# <div class='sign-up-button'>
     <a href='/users/sign_up' class="sign-up">新規登録</a>
   </div>
-</div>
+</div> %>
