deviseを用いたゲストログインの実装

--- a/app/assets/stylesheets/shared/homes_header.css
+++ b/app/assets/stylesheets/shared/homes_header.css
@@ -46,6 +46,26 @@
   color: #FFF;
 }
 
+/* 簡単ログイン */
+.gest-button {
+  height: 50%;
+  position: absolute;
+  right: 343px;
+}
+
+.gest {
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  padding: 8px 10px 5px 10px;
+  text-decoration: none;
+  color: #FFA000;
+  background: #fff1da;
+  border-bottom: solid 4px #FFA000;
+  border-radius: 15px 15px 0 0;
+  transition: .4s;
+}
+
 /* ログイン */
 
 .login-button {
