--- a/app/views/shared/_homes_header.html.erb
+++ b/app/views/shared/_homes_header.html.erb
@@ -6,6 +6,14 @@
     </a>
   </div>
 
+<%#簡単ログイン%>
+  <div class='gest-button'>
+    <%# <a href='/homes/guest_sign_in' class="gest",method: :post>ゲストログイン(閲覧用)</a>  %>
+
+    <%= link_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, method: :post, class:'gest' %>
+  </div>
+
+
 <%# ログイン %>
   <div class='login-button'>
     <a href='/users/sign_in' class="login">ログイン</a>
