deviseを使用した簡単ログインの実装

--- a/app/views/shared/_sign-up_header.html.erb
+++ b/app/views/shared/_sign-up_header.html.erb
@@ -19,6 +19,8 @@
     <a href='/users/sign_in' class="sing-login">ログイン</a>
   </div>
 
+</div>
+
 
 <%#新規登録アイコン%>
   <%# <div class='sign-up-button'>
