--- a/app/assets/stylesheets/user/sign-up.css
+++ b/app/assets/stylesheets/user/sign-up.css
@@ -2,6 +2,7 @@
   width: 100%;
   min-width: 800px;
   height: 100%;
+  margin: auto;
   background-color: #f5f5f5;
   display: flex;
   justify-content: center;
@@ -25,6 +26,16 @@
 .form-header-text {
   line-height: 100px;
   border-bottom: 1px solid #f5f5f5;
+  font-weight: bold;
+}
+
+.indispensable {
+  background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
   font-weight: bold;
 }
 
