--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -1,29 +1,34 @@
 .post-container {
   width: 50vw;
-  height: 100vh; 
+  height: 200vh; 
   margin: auto;
+  padding-top: 15vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: violet;
+  position: relative;
 }
 
 .post-photo-item {
-width: 75%;
-height: 50%;
+width: 100%;
+height: 20%;
 background-color: turquoise;
+position: absolute;
+top: 150px;
 }
 
 .post-map-item {
-width: 75%;
-height: 100px;
-margin: 50px 0px;
-background-color: tan;
+width: 100%;
+position: absolute;
+top: 457px;
 }
 
 .post-introduction-item {
-width: 75%;
-height: 100px;
+width: 100%;
+height: 20%;
 background-color: tomato;
+position: absolute;
+top: 850px;
 }
