--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,14 +1,15 @@
 <%= render 'shared/post_header'%>
 <div class='post-container'>
   <div class='post-photo-item'>
+    
   </div>
   <div class='post-map-item'>
 
-    <div class ='poto-map'>
+    <div class ='photo-map'>
       <h2>gmap</h2>
 
       <!-- 地名入力用のinputを追加 -->
-      <input id="address" type="textbox" value="Sydney, NSW">
+      <input id="address" type="textbox" value="東京スカイツリー">
 
       <!-- buttonをクリックしたらcodeAddressを実行-->
       <input type="button" value="Encode" onclick="codeAddress()">
@@ -17,7 +18,7 @@
 
       <style>
       #map{
-        height: 400px;
+        height: 300px;
       }
       </style>
 
@@ -35,7 +36,7 @@
         geocoder = new google.maps.Geocoder()
 
         map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: -34.397, lng: 150.644},
+        center: {lat: 35.710063, lng: 139.810700},
         zoom: 8
         });
       }
