--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,7 +1,18 @@
 <%= render 'shared/post_header'%>
 <div class='post-container'>
+  <%= form_with(model: @photo, local: true) do |f| %>
   <div class='post-photo-item'>
-    
+    <div class="post-photo-text">
+      写真
+    </div>
+    <div class="post-photo-upload">
+      <p>
+        クリックしてファイルをアップロード
+      </p>
+      <%= f.fild_field :image, id:'photo-image'%>
+    </div>
+  </div>
+
   </div>
   <div class='post-map-item'>
 
@@ -62,7 +73,7 @@
         });
       }
       </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAsrg9lIIwDjL1XYBIMh-LgIwjoE1vr2Q&callback=initMap" async defer></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAP_API_KEY&callback=initMap" async defer></script>
     </div>
 
   </div>
