カラムを記述

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -78,5 +78,6 @@
 
   </div>
   <div class='post-introduction-item'>
+    <%= f.text_area :name, class:"introduction-text", id:"item-name"%>
   </div>
 </div>
