緯度と経度の取得完了

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -88,7 +88,7 @@
           <p>経度：<span id="longitude">???</span><span>度</span></p>
       </div>
   </div>
-  <script src="geolocation.js"></script>
+  <%= javascript_pack_tag 'photo/new' %>
 
   <div class='post-introduction-item'>
     <%# <%= f.text_area :name, class:"introduction-text", id:"item-name"%> 
