--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -10,7 +10,7 @@
       <p>
         クリックしてファイルをアップロード
       </p>
-      <%# <%= f.fild_field :image, id:'photo-image'%> 
+      <%= f.fild_field :image %>
     </div>
   </div>
 
@@ -84,13 +84,13 @@
           </button>
       </div>
       <div class="txt-margin">
-          <p>緯度：<span id="latitude">???</span><span>度</span></p>
+          <p>緯度：<span id="latitude">text</span><span>度</span></p>
           <p>経度：<span id="longitude">???</span><span>度</span></p>
       </div>
   </div>
   <%= javascript_pack_tag 'photo/new' %>
 
   <div class='post-introduction-item'>
-    <%# <%= f.text_area :name, class:"introduction-text", id:"item-name"%> 
+    <%= f.text_area :name, class:"introduction-text", %>
   </div>
 </div>
