--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -38,3 +38,10 @@ background-color: tomato;
 position: absolute;
 top: 850px;
 }
+
+.post-new-btn {
+  width: 100%;
+  height: 20%;
+  position: absolute;
+  bottom: 20px;
+}
