--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,12 @@
 <%= render 'shared/top_header'%>
-
+<% @photo.each do |photo|%>
+  <div class='home-photo-container'>
+    <div class='user-name'>
+      <%= photo.user.nickname%>
+    </div>
+    <%= image_tag photo.image, class: 'user-photo'%>
+  </div>
+<% end %>
 <div class='post-btn'>
   <%= link_to "投稿", '/photos/new'%>
 </div>
