--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,6 @@
-<div class='user-pro'>
+<div class='user-profile-container'>
+  <div class='user'>
+</div>
 
 <div class='user-show-contailer'>
   <div class='user-show-name'>
