写真の詳細ページに遷移できるように記述

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/top_header'%>
 <% @photo.each do |photo|%>
   <div class='home-photo-container'>
-    <%= link_to photo_path(@photo) do %>
+    <%= link_to photo_path(photo) do %>
       <div class='user-name'>
         <%= photo.user.nickname%>
       </div>
