--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -14,8 +14,20 @@
       <%= @photo.user.nickname%>
     </div>
     <%= image_tag @photo.image, class: 'user-show-photo' %>
-    <div>
-      komennto
+    <%= form_with(model: [@photo, @comment], local: true) do |form| %>
+      <%= form.text_area :text, placeholder: "コメントする"%>
+      <%= form.submit "SEND"%>
+    <% end %>
+
+    <div class='comments-table-container'>
+      <% if @comments %>
+        <% @comments.each do |comment|%>
+          <p>
+            <strong><%= link_to comment.user.nickname, '/user/#{comment.user_id'%>:<strong>
+            <%= comment.text%>
+          </p>
+        <%end%>
+      <%end%>
     </div>
   </div>
 </div>
