--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -23,7 +23,7 @@
       <% if @comments %>
         <% @comments.each do |comment|%>
           <p>
-            <strong><%= link_to comment.user.nickname, '/user/#{comment.user_id'%>:<strong>
+            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>:<strong>
             <%= comment.text%>
           </p>
         <%end%>
