ホーム画面からマイページに遷移できるように記述

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -9,6 +9,7 @@
       </div>
     <% end %>
 <% end %>
+<%= link_to "マイページ","/users/#{current_user.id}/mypage" %>
 <div class='post-btn'>
   <%= link_to "投稿", '/photos/new'%>
 </div>
