消去と編集機能を追加

--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -8,6 +8,8 @@
 
     <ul class ='nore_list'>
       <li>
+        <%= link_to '編集', "/photos/#{photo.id}/edit", metohod: :get%>
+      <li>
         <%= link_to '消去', "/photos/#{photo.id}", method: :delete %>
       </li>
     </ul>
