--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/post_header'%>
-<div class='post-container'>
+<div class='post-user-container'>
   <%= form_with(model: @photo, local: true) do |f| %>
   <div class='post-photo-item'>
     <div class="post-photo-text">
