--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -1,13 +1,10 @@
-.post-container {
-  width: 50vw;
-  height: 200vh; 
-  margin: auto;
-  padding-top: 15vh;
-  display: flex;
+.post-user-container {
+  width: 100%;
+  height: 100%; 
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: violet;
+  background-color: rgb(12, 118, 211);
   position: relative;
 }
 
