--- a/app/assets/stylesheets/photos/index.html.css
+++ b/app/assets/stylesheets/photos/index.html.css
@@ -1,3 +1,19 @@
+.search-container {
+  padding-top: 20vh;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+
+}
+
+.search-input {
+
+}
+
+.search-btn {
+
+}
+
 .top-post-wrapper {
   width: 75vw;
   height: 100vh;
