--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,14 @@
 <%= render 'shared/top_header'%>
+<div class="search-container">
+  <%= form_with(url: search_photos_path, local: true, method: :get, class: "search-form") do |form| %>
+    <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+    <%= form.submit "検索", class: "search-btn" %>
+ <% end %> 
+</div>
+
+
 <% @photo.each do |photo|%>
+
 <div class='top-post-wrapper'>
   <div class='top-post-container'>
     <div class='post-user-container'>
