--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -22,14 +22,13 @@
       </div>
     </div>
   </div>
-</div>
 
   <%#ページの名前が入る%>
-  <%# <div class='top-page-name'>
-    <h2 class='page-name'> 
 
-    </h2>
-  </div> %>
+  <div class='top-page-name'>
+    <%= @page_name %>
+  </div> 
+</div>
 
 <%# ログイン %>
   <%# <div class='sing-login-button'>
