--- a/app/assets/stylesheets/shared/sign-up_header.css
+++ b/app/assets/stylesheets/shared/sign-up_header.css
@@ -6,12 +6,11 @@
   align-items: center;
   position: fixed;
   z-index: 1;
-  background-color: white;
+  background-color: rgb(247, 247, 247);
 }
 
 .top-page-name {
-  position: absolute;
-  text-align: center;
+  font-size: x-large;
 }
 
 .page-name {
