マイページアイコンの実装

--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -7,8 +7,24 @@
     </a>
   </div>
 
+  <div class='logout-container'>
+    <div class='logout-btn'>
+      <%= link_to image_tag('exit.png', class: "logout-icon"), destroy_user_session_path, method: :delete %>
+    </div>
+    <span class='logout-text'>ログアウト</span>
+  </div>
+    
+  <div class='mypage-container'>
+    <div class='mypage-btn'>
+      <%= link_to image_tag('human.png', class: "human-icon"), "/users/#{current_user.id}/mypage"  %>
+    </div>
+    <span class='mypage-text'>マイページ</span>
+  </div>
+
+
+
 <%# ハンバーガーアイコン %>
-  <div class='hamburger'>
+  <%# <div class='hamburger'>
    <div id="nav-drawer">
       <input id="nav-input" type="checkbox" class="nav-unshown">
       <label id="nav-open" for="nav-input"><span></span></label>
@@ -16,30 +32,10 @@
       <div id="nav-content">ここに中身を入れる
         <div class='logout-button'>
           <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
-        </div>
+        <%# </div>
         <div class='my-page-button'>
         </div>
       </div>
     </div>
-  </div>
-
-  <%#ページの名前が入る%>
-
-  <div class='top-page-name'>
-    <%= @page_name %>
-  </div> 
+  </div> %> 
 </div>
-
-<%# ログイン %>
-  <%# <div class='sing-login-button'>
-    <a href='/users/sign_in' class="sing-login">ログイン</a>
-  </div>
-
-</div> %>
-
-
-<%#新規登録アイコン%>
-  <%# <div class='sign-up-button'>
-    <a href='/users/sign_up' class="sign-up">新規登録</a>
-  </div>
-</div> %>
