--- a/app/assets/stylesheets/shared/top_header.css
+++ b/app/assets/stylesheets/shared/top_header.css
@@ -1,3 +1,13 @@
+.top-header {
+  width: 100vw;
+  height: 15vh;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  background-color: rgb(247, 247, 247);
+}
+
 .hamburger {
   position: absolute;
   right: 30px;
@@ -78,4 +88,43 @@
   -webkit-transform: translateX(0%);
   transform: translateX(0%);/*中身を表示（右へスライド）*/
   box-shadow: 6px 0 25px rgba(0,0,0,.15);
+}
+
+.logout-container {
+  text-align: center;
+  position: absolute;
+  right: 30px;
+}
+
+/* .logout-btn {
+} */
+
+.logout-icon {
+ width: 40px;
+ margin-top: 10px;
+ vertical-align: top;
+}
+
+.logout-text{
+ font-size: 12px;
+}
+
+.mypage-container {
+  text-align: center;
+  position: absolute;
+  right: 30px;
+}
+
+.mypage-btn{
+
+}
+
+.human-icon {
+  width: 40px;
+  margin-top: 10px;
+  vertical-align: top;
+}
+
+.mypage-text{
+  font-size: 12px;
 }
