--- a/app/views/favorites/destroy.js.erb
+++ b/app/views/favorites/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#favorites_buttons_<%= @photo.id %>').html("<%= j(render partial: 'favprites/favo', locals: {photo: @photo}) %>");
+$('#favorites_buttons_<%= @photo.id %>').html("<%= j(render partial: 'favorites/favo', locals: {photo: @photo}) %>");
