--- a/app/assets/stylesheets/photos/index.html.css
+++ b/app/assets/stylesheets/photos/index.html.css
@@ -6,17 +6,17 @@
 
 }
 
-.search-input {
+/* .search-input {
 
 }
 
 .search-btn {
 
-}
+} */
 
 .top-post-wrapper {
   width: 75vw;
-  height: 100vh;
+  height: 100%;
   margin: auto;
   padding-top: 15vh;
   /* flex-direction: column; */
@@ -26,10 +26,8 @@
 .top-post-container {
   width: 100%;
   height: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
-  /* flex-direction: column; */
   position: relative;
   box-shadow:
   0 1.9px 2.5px rgba(0, 0, 0, 0.057),
@@ -54,8 +52,8 @@
   left: 50px;
 }
 
-.post-user-name {
-}
+/* .post-user-name {
+} */
 
 .post-main-photo {
   background-color: white;
@@ -85,18 +83,18 @@
 
 .post-footer-container {
   width: 100%;
-  height: 15%;
+  height: 60px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: rgb(242, 240, 240);
 }
 
-.post-comment-btn {
+/* .post-comment-btn {
 }
 
 .post-fovo-btn {
-}
+} */
 
 .purchase-btn {
   width: 7vw;
