--- a/app/assets/stylesheets/shared/top_header.css
+++ b/app/assets/stylesheets/shared/top_header.css
@@ -112,12 +112,12 @@
 .mypage-container {
   text-align: center;
   position: absolute;
-  right: 30px;
+  right: 125px;
 }
 
-.mypage-btn{
+/* .mypage-btn{
 
-}
+} */
 
 .human-icon {
   width: 40px;
