--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,100 +1,100 @@
 <%= render 'shared/post_header'%>
-<div class='post-user-container'>
-  <%= form_with(model: @photo, local: true) do |f| %>
-  <div class='post-photo-item'>
-    <div class="post-photo-text">
-      写真
-    </div>
-    <div class="post-photo-upload">
-      <p>
-        クリックしてファイルをアップロード
-      </p>
-      <%= f.file_field :image, class: 'photo-image' %>
-    </div>
-  </div>
 
-  <div class='post-map-item'>
-
-    <div class ='photo-map'>
-      <h2>gmap</h2>
-
-      <!-- 地名入力用のinputを追加 -->
-      <input id="address" type="textbox" value="東京スカイツリー">
-
-      <!-- buttonをクリックしたらcodeAddressを実行-->
-      <input type="button" value="Encode" onclick="codeAddress()">
-      <div id='map'>
+  
+  <div class='new-post-wrapper'>
+    <%= form_with(model: @photo, local: true) do |f| %>  
+      <div class='post-photo-item'>
+        <div class="post-photo-upload">
+          <p>
+            クリックして写真をアップロード
+          </p>
+          <%= f.file_field :image, class: 'photo-image' %>
+        </div>
       </div>
 
-      <style>
-      #map{
-        height: 300px;
-      }
-      </style>
+      <div class='post-map-item'>
 
-      <script>
-      /*
-      mapを関数の外で定義(codeAddressでも使うため)
-      geocoderを用意
-      */
+        <div class ='photo-map'>
+          <h2>gmap</h2>
 
-      let map
-      let geocoder
+          <!-- 地名入力用のinputを追加 -->
+          <input id="address" type="textbox" value="東京スカイツリー">
 
-      function initMap(){
-        // geocoderを初期化
-        geocoder = new google.maps.Geocoder()
+          <!-- buttonをクリックしたらcodeAddressを実行-->
+          <input type="button" value="Encode" onclick="codeAddress()">
+          <div id='map'>
+          </div>
 
-        map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: 35.710063, lng: 139.810700},
-        zoom: 8
-        });
-      }
-
-      function codeAddress(){
-        // 入力を取得
-        let inputAddress = document.getElementById('address').value;
-
-        // geocodingしたあとmapを移動
-        geocoder.geocode( { 'address': inputAddress}, function(results, status) {
-          if (status == 'OK') {
-      // map.setCenterで地図が移動
-            map.setCenter(results[0].geometry.location);
-
-      // google.maps.MarkerでGoogleMap上の指定位置にマーカが立つ
-            var marker = new google.maps.Marker({
-                map: map,
-                position: results[0].geometry.location
-            });
-          } else {
-            alert('Geocode was not successful for the following reason: ' + status);
+          <style>
+          #map{
+            height: 300px;
           }
-        });
-      }
-      </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
-    </div>
-  </div>
+          </style>
 
-  <div class="center">
-      <div class="btn-margin">
-          <button id="btn" class="btn btn-outline-primary btn-lg">
-              現在位置を取得する
-          </button>
+          <script>
+          /*
+          mapを関数の外で定義(codeAddressでも使うため)
+          geocoderを用意
+          */
+
+          let map
+          let geocoder
+
+          function initMap(){
+            // geocoderを初期化
+            geocoder = new google.maps.Geocoder()
+
+            map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 35.710063, lng: 139.810700},
+            zoom: 8
+            });
+          }
+
+          function codeAddress(){
+            // 入力を取得
+            let inputAddress = document.getElementById('address').value;
+
+            // geocodingしたあとmapを移動
+            geocoder.geocode( { 'address': inputAddress}, function(results, status) {
+              if (status == 'OK') {
+          // map.setCenterで地図が移動
+                map.setCenter(results[0].geometry.location);
+
+          // google.maps.MarkerでGoogleMap上の指定位置にマーカが立つ
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: results[0].geometry.location
+                });
+              } else {
+                alert('Geocode was not successful for the following reason: ' + status);
+              }
+            });
+          }
+          </script>
+          <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API_KEY'] %>&callback=initMap" async defer></script>
+        </div>
+
+        <div class="center">
+          <div class="btn-margin">
+              <button id="btn" class="btn btn-outline-primary btn-lg">
+                  現在位置を取得する
+              </button>
+          </div>
+          <div class="txt-margin">
+              <p>緯度：<span id="latitude">text</span><span>度</span></p>
+              <p>経度：<span id="longitude">???</span><span>度</span></p>
+          </div>
+        </div>
+        <%= javascript_pack_tag 'photo/new' %>
+
       </div>
-      <div class="txt-margin">
-          <p>緯度：<span id="latitude">text</span><span>度</span></p>
-          <p>経度：<span id="longitude">???</span><span>度</span></p>
+
+      <div class='post-introduction-item'>
+        <%= f.text_area :explanation, class:"introduction-text" %>
       </div>
-  </div>
-  <%= javascript_pack_tag 'photo/new' %>
 
-  <div class='post-introduction-item'>
-    <%= f.text_area :explanation, class:"introduction-text" %>
-  </div>
-
-  <div class='post-new-btn'>
-    <%= f.submit "投稿する" ,class: 'post-new'%>
-  </div>
-  <% end %>
+      <div class='post-new-btn'>
+        <%= f.submit "投稿する" ,class: 'post-new'%>
+      </div>
+    <% end %>
 </div>
