--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -1,11 +1,18 @@
+.new-post-wrapper {
+  width: 75vw;
+  height: 100vh;
+  margin: auto;
+  padding-top: 15vh;
+}
+
 .post-user-container {
   width: 100%;
-  height: 100%; 
+  height:65vh; 
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(12, 118, 211);
   position: relative;
+  margin: 7vh 0px;
 }
 
 .center {
@@ -16,29 +23,43 @@
 
 .post-photo-item {
 width: 100%;
-height: 20%;
-background-color: turquoise;
-position: absolute;
+height: 65vh;
 top: 150px;
+display: flex;
+align-items: center;
+justify-content: center;
+margin: 7vh 0px;
 }
 
+/* .post-photo-upload {
+} */
+
+/* .photo-image {
+} */
+
 .post-map-item {
-width: 100%;
-position: absolute;
-top: 457px;
+position: relative;
+}
+
+.center {
+  position: absolute;
+  right: 68px;
+  bottom: 22px;
 }
 
 .post-introduction-item {
-width: 100%;
-height: 20%;
-background-color: tomato;
-position: absolute;
-top: 850px;
+display: flex;
+justify-content: center;
+margin: 7vh 0px;
+}
+
+.introduction-text {
+  width: 95%;
+  height: 25vh;
 }
 
 .post-new-btn {
-  width: 100%;
-  height: 20%;
-  position: absolute;
-  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
