--- a/app/views/shared/_post_header.html.erb
+++ b/app/views/shared/_post_header.html.erb
@@ -1,4 +1,4 @@
-<div class='post-header'>
+<div class='top-header'>
 
   <%#ロゴの情報が入る%>
   <div class='photoroke-icon'>
@@ -7,8 +7,31 @@
     </a>
   </div>
 
+<%#ページの名前が入る%>
+  <div class='top-page-name'>
+    <h2 class='page-name'> 
+      <%= @page_name %>
+    </h2>
+  </div>
+
+<%# ログアウト %>
+  <div class='logout-container'>
+    <div class='logout-btn'>
+      <%= link_to image_tag('exit.png', class: "logout-icon"), destroy_user_session_path, method: :delete %>
+    </div>
+    <span class='logout-text'>ログアウト</span>
+  </div>
+    
+<%# マイページ %>
+  <div class='mypage-container'>
+    <div class='mypage-btn'>
+      <%= link_to image_tag('human.png', class: "human-icon"), "/users/#{current_user.id}/mypage"  %>
+    </div>
+    <span class='mypage-text'><%= current_user.nickname %></span>
+  </div>
+
 <%# ハンバーガーアイコン %>
-  <div class='hamburger'>
+  <%# <div class='hamburger'>
    <div id="nav-drawer">
       <input id="nav-input" type="checkbox" class="nav-unshown">
       <label id="nav-open" for="nav-input"><span></span></label>
@@ -16,31 +39,10 @@
       <div id="nav-content">ここに中身を入れる
         <div class='logout-button'>
           <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %>
-        </div>
+        <%# </div>
         <div class='my-page-button'>
         </div>
       </div>
     </div>
-  </div>
-
-  <%#ページの名前が入る%>
-  <div class='top-page-name'>
-    <h2 class='page-name'> 
-      <%= @page_name %>
-    </h2>
-  </div>
+  </div> %> 
 </div>
-
-<%# ログイン %>
-  <%# <div class='sing-login-button'>
-    <a href='/users/sign_in' class="sing-login">ログイン</a>
-  </div>
-
-</div> %>
-
-
-<%#新規登録アイコン%>
-  <%# <div class='sign-up-button'>
-    <a href='/users/sign_up' class="sign-up">新規登録</a>
-  </div>
-</div> %>
