--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -18,7 +18,7 @@
     <div class='mypage-btn'>
       <%= link_to image_tag('human.png', class: "human-icon"), "/users/#{current_user.id}/mypage"  %>
     </div>
-    <span class='mypage-text'>マイページ</span>
+    <span class='mypage-text'><%= current_user.nickname %></span>
   </div>
 
 
