お気に入り機能の実装

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -33,8 +33,7 @@
           <div class='post-comment-btn'>
             ○
           </div>
-          
-          <div id="favo_buttons_<%= photo.id %>">
+          <div id="favos_buttons_<%= photo.id %>">
             <%= render partial: 'favorites/favo', locals: { photo: photo} %>
            </div> 
         </div>
