--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$('#favo_buttons_<%= @photo.id %>').html("<%= j(render partial: 'favorites/favo', locals: {photo: @photo}) %>");
+$('#favos_buttons_<%= @photo.id %>').html("<%= j(render partial: 'favorites/favo', locals: {photo: @photo}) %>");
