--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,29 @@
 
 <div class='user-profile-container'>
   <div class='user-account-container'>
+    <div class='user-header-icon'>
+    </div>
+    <div class='user-header-profile'>
+      <p class='user-profile-text'>
+      ここに紹介文が入ります
+      </p>
+    </div>
+    <div class='follow-container'>
+        <%= render "follow_form" %>
+    </div>
+    <div class="follower">
+        <%= link_to followers_user_path(@user.id) do %>
+            <h5 style="color: black;">フォロワー<%= @user.followers.count %>人</h5>
+        <% end %>
+    </div>
+    <div class="follow">
+        <%= link_to following_user_path(@user.id) do %>
+                  <h5 style="color: black;">フォロー<%= @user.following.count %>人</h5>
+        <% end %>
+    </div>
   </div>
-  <div class='user-photo-container'>
+
+  <div class='user-photo-container'>  
     <% @photos.each do |photo| %>
       <div class='top-post-wrapper'>
         <div class='top-post-container'>
@@ -28,23 +49,6 @@
             <div class='post-footer-container'>
               <div class='post-comment-btn'>
                 ○
-              </div>
-
-              <div class='post-favo-btn'>
-
-              <div class="follower">
-                  <%= link_to followers_user_path(@user.id) do %>
-                      <h5 style="color: black;">フォロワー<%= @user.followers.count %>人</h5>
-                  <% end %>
-              </div>
-              <div class="follow">
-                  <%= link_to following_user_path(@user.id) do %>
-                            <h5 style="color: black;">フォロー<%= @user.following.count %>人</h5>
-                  <% end %>
-              </div>
-              <div>
-                  <%= render "follow_form" %>
-              </div>
             </div>
         
           <% end %>
