--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,14 +1,13 @@
-<h1>Users#follows</h1>
-<p>Find me in app/views/users/follows.html.erb</p>
+<%= render 'shared/post_header'%>
 
-<% @users.each do |user| %>
-  <hr>
-  <p><span>email: </span><%= link_to user.email, user_path(user.id) %></p>
-    <% if current_user != user %>
-        <% if user.following?(current_user) %>
-            <p><%=link_to "フォロー済み", user_relationships_path(user.id), method: :delete %></p>
-        <% else %>
-            <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
-        <% end %>
-    <% end %>
-<% end %>
+<div class='followers-user-wrapper'>
+  <% @users.each do |user| %>
+  <div class='followers-user-container'>
+    <div class='followers-user-icon'>
+    </div>
+    <div class ='follwores-name-container'>
+      <%= link_to user.nickname, user_path(user.id), class:"follwores-user-nickname"%>
+    </div>
+  </div>
+  <% end %>
+</div>
