--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -31,6 +31,12 @@ justify-content: center;
 margin: 7vh 0px;
 }
 
+img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
 /* .post-photo-upload {
 } */
 
