--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,8 +1,10 @@
+<%= javascript_pack_tag 'photo/preview' %>
 <%= render 'shared/post_header'%>
 
   
   <div class='new-post-wrapper'>
-    <%= form_with(model: @photo, local: true) do |f| %>  
+
+
       <div class='post-photo-item'>
         <div class="post-photo-upload">
           <p>
@@ -10,9 +12,9 @@
           </p>
           <%= f.file_field :image, class: 'photo-image' %>
         </div>
+        <div id = "image-list", class='image-list'>
+        </div>
       </div>
-
-      <div id = "image-list"> </div>
 
       <div class='post-map-item'>
 
