--- a/app/assets/stylesheets/photos/new.html.css
+++ b/app/assets/stylesheets/photos/new.html.css
@@ -5,6 +5,20 @@
   padding-top: 15vh;
 }
 
+.photo-title-container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 60px 0px;
+}
+
+.photo-title {
+  width: 80%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .post-user-container {
   width: 100%;
   height:65vh; 
@@ -23,17 +37,37 @@
 
 .post-photo-item {
 width: 100%;
-height: 65vh;
+height: 100%;
 top: 150px;
-display: flex;
 align-items: center;
 justify-content: center;
 margin: 7vh 0px;
 }
 
-img {
+.post-photo-upload{
+  height: calc(100% - 20%);
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.image-list{
+  height: calc(100% - 80%);
+  box-shadow:
+  0 1.9px 2.5px rgba(0, 0, 0, 0.057),
+  0 5px 6.1px rgba(0, 0, 0, 0.076),
+  0 10.1px 11.4px rgba(0, 0, 0, 0.086),
+  0 19.2px 19.8px rgba(0, 0, 0, 0.092),
+  0 38.4px 34.8px rgba(0, 0, 0, 0.1),
+  0 101px 74px rgba(0, 0, 0, 0.13);
+}
+
+.view-container{
   height: 100%;
+}
+
+.view-image{
   width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
@@ -68,4 +102,5 @@ margin: 7vh 0px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8vh;
 }
