投稿したユーザーはお気に入り数しか表示がされないように変更しました。コメント数をカウントして表示されるようにしました

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -19,11 +19,14 @@
 
     <div class='post-footer-container'>
       <div class='post-comment-btn'>
-        ○
+        <%= link_to image_tag('comment.png', class: 'comment-logo'),user_path(photo.user.id)%>
+        <%= photo.comments.count%>
       </div>
+
       <div id="favos_buttons_<%= photo.id %>">
         <%= render partial: 'favorites/favo', locals: { photo: photo} %>
       </div> 
+
     </div>
   </div>
 </div>
