--- a/app/views/favorites/_favo.html.erb
+++ b/app/views/favorites/_favo.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? %>
+<% if  current_user.id != photo.user_id%>
     <% if photo.favorited_by?(current_user) %>
         <p><span>お気に入り解除: </span><%=link_to photo.favorites.count, "/photos/#{photo.id}/favorites", method: :delete, remote: true %></p>
     <% else %>
