--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,11 @@
 <div class='user-profile-container'>
   <div class='user-account-container'>
     <div class='user-header-icon'>
+      <% if @user.avatar.attached?%>
+        <%= image_tag @user.avater, class:'avatar'%>
+      <%else%>
+        <%= image_tag ("human.png"), class:'avatar'%>
+      <% end %>
     </div>
     <div class='user-header-profile'>
       <p class='user-profile-text'>
@@ -22,6 +27,9 @@
                   <h5 style="color: black;">フォロー<%= @user.following.count %>人</h5>
         <% end %>
     </div>
+
+    <div class='user-edit-label'>
+      
   </div>
 
   <div class='user-photo-container'>  
