--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,8 +28,19 @@
         <% end %>
     </div>
 
-    <div class='user-edit-label'>
-      
+    <div class='accbox'>
+        <!--ラベル1-->
+      <label for="label1">
+        <%= image_tag 'setting.png' %>
+      </label>
+      <input type="checkbox" id="label1" class="cssacc" />
+      <div class="accshow">
+        <!--ここに隠す中身-->
+        <%= link_to 'プロフィール編集', edit_user_registration_path, method: :edit%><br>
+        <%= link_to 'アカウント消去', user_registration_path, method: :delete %>
+      </div>
+      <!--//ラベル1-->
+    </div>
   </div>
 
   <div class='user-photo-container'>  
