プロフィール編集ページの大枠を記述

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
       <input type="checkbox" id="label1" class="cssacc" />
       <div class="accshow">
         <!--ここに隠す中身-->
-        <%= link_to 'プロフィール編集', edit_user_registration_path, method: :edit%><br>
+        <%= link_to 'プロフィール編集', edit_user_registration_path%><br>
         <%= link_to 'アカウント消去', user_registration_path, method: :delete %>
       </div>
       <!--//ラベル1-->
