--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,17 +1,25 @@
 <%= render "shared/edit_header"%>
+<%= javascript_pack_tag 'registrations/preview' %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_with model: @user, url: user_registration_path, local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="edit-wrapper">
-    <div class="edit-avatar-container">
-      <p>
-        クリックして写真をアップロード
-      </p>
+    <div id="avatar-list">
+    </div>
+    <p class="edit-avatar-text">
+      クリックして写真をアップロード
+    </p>
+    <div class="edit-avatar-upload">
       <%= f.file_field :avatar, class: 'edit-avatar'%>
     </div>
     <div class="edit-profile-container">
       <%= f.text_area :profile, class: 'edit-profile'%>
     </div>
+
+    <div class='post-new-btn'>
+    <%= f.submit "変更する" ,class: 'post-new'%>
+    </div>
+
   </div>
 <% end %>
