--- a/app/views/shared/_edit_header.html.erb
+++ b/app/views/shared/_edit_header.html.erb
@@ -10,7 +10,7 @@
 <%#ページの名前が入る%>
   <div class='top-page-name'>
     <h2 class='page-name'> 
-      プロフィール変更
+      <%= @page_name %>
     </h2>
   </div>
 
