--- a/app/assets/stylesheets/registrations/edit.css
+++ b/app/assets/stylesheets/registrations/edit.css
@@ -12,7 +12,7 @@
   height: 250px;
   border-radius: 50%;
   margin: auto;
-  margin-top: 25px;
+  position: absolute;
 }
 
 .avatar-div {
@@ -58,4 +58,23 @@
   background-color: midnightblue;
   width: calc(100% - 50%);
   height: 100%;
+}
+
+/* elseの場合 */
+.else-avatar-container{
+  background-color: lightseagreen;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  margin: auto;
+  margin-top: 25px;
+  display: flex;
+}
+
+.else-edit-avatar {
+background-color: blueviolet;
+width: 100%;
+height: 100%;
+object-fit: cover;
+border-radius: 50%;
 }
